// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: text;
  padding: 0.5rem;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
}

.emotion-5:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-5[data-disabled="false"]:hover,
.emotion-5 [data-disabled="false"]:focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-5:focus-within {
  border-color: #792dd4;
}

.emotion-5[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-5[data-size='medium'] {
  height: 2.5rem;
}

.emotion-5[data-size='large'] {
  height: 3rem;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-5[data-error='true']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-5[data-error='true']:not([data-disabled="true"]):not([data-readonly="true"]):hover {
  border-color: #92103f;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-11 {
  border: none;
  outline: none;
  background: transparent;
  font-size: 0.875rem;
  width: 1.5625rem;
  height: 1.5rem;
  text-align: center;
  border-radius: 0.25rem;
  color: #3f4250;
  caret-color: transparent;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11:not(:disabled):hover {
  background-color: #e9eaeb;
  color: #727683;
}

.emotion-11:not(:disabled):active,
.emotion-11:not(:disabled):focus {
  background-color: #e9eaeb;
  color: #3f4250;
}

.emotion-11:-moz-read-only {
  cursor: default;
}

.emotion-11:read-only {
  cursor: default;
}

.emotion-11:disabled {
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-11[data-period="true"] {
  color: #727683;
}

.emotion-11[data-period="true"][data-size="large"] {
  width: calc(1.5625rem + 0.125rem);
}

.emotion-11::-moz-selection {
  background: none;
}

.emotion-11::selection {
  background: none;
}

.emotion-14 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-inline: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 emotion-4"
          for="«r0»"
        >
          Test
        </label>
        <div
          aria-required="false"
          class="emotion-5 emotion-6"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-size="large"
        >
          <div
            class="emotion-7 emotion-1"
          >
            <div
              class="emotion-7 emotion-1"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-11 emotion-12"
                data-size="large"
                data-testid="hours-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="emotion-13 emotion-14 emotion-4"
              >
                :
              </span>
            </div>
            <div
              class="emotion-7 emotion-1"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-11 emotion-12"
                data-size="large"
                data-testid="minutes-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="emotion-13 emotion-14 emotion-4"
              >
                :
              </span>
            </div>
            <div
              class="emotion-7 emotion-1"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-11 emotion-12"
                data-size="large"
                data-testid="seconds-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: text;
  padding: 0.5rem;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
}

.emotion-5:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-5[data-disabled="false"]:hover,
.emotion-5 [data-disabled="false"]:focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-5:focus-within {
  border-color: #792dd4;
}

.emotion-5[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-5[data-size='medium'] {
  height: 2.5rem;
}

.emotion-5[data-size='large'] {
  height: 3rem;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-5[data-error='true']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-5[data-error='true']:not([data-disabled="true"]):not([data-readonly="true"]):hover {
  border-color: #92103f;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-11 {
  border: none;
  outline: none;
  background: transparent;
  font-size: 0.875rem;
  width: 1.5625rem;
  height: 1.5rem;
  text-align: center;
  border-radius: 0.25rem;
  color: #3f4250;
  caret-color: transparent;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11:not(:disabled):hover {
  background-color: #e9eaeb;
  color: #727683;
}

.emotion-11:not(:disabled):active,
.emotion-11:not(:disabled):focus {
  background-color: #e9eaeb;
  color: #3f4250;
}

.emotion-11:-moz-read-only {
  cursor: default;
}

.emotion-11:read-only {
  cursor: default;
}

.emotion-11:disabled {
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-11[data-period="true"] {
  color: #727683;
}

.emotion-11[data-period="true"][data-size="large"] {
  width: calc(1.5625rem + 0.125rem);
}

.emotion-11::-moz-selection {
  background: none;
}

.emotion-11::selection {
  background: none;
}

.emotion-14 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-inline: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 emotion-4"
          for="«r4»"
        >
          Test
        </label>
        <div
          aria-required="false"
          class="emotion-5 emotion-6"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-size="large"
        >
          <div
            class="emotion-7 emotion-1"
          >
            <div
              class="emotion-7 emotion-1"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-11 emotion-12"
                data-size="large"
                data-testid="hours-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="emotion-13 emotion-14 emotion-4"
              >
                :
              </span>
            </div>
            <div
              class="emotion-7 emotion-1"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-11 emotion-12"
                data-size="large"
                data-testid="minutes-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="emotion-13 emotion-14 emotion-4"
              >
                :
              </span>
            </div>
            <div
              class="emotion-7 emotion-1"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-11 emotion-12"
                data-size="large"
                data-testid="seconds-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
